--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"dotenv": "^16.4.5",
 		"express": "~4.16.1",
 		"express-async-handler": "^1.2.0",
-		"express-rate-limit": "~7.2.0",
+		"express-rate-limit": "^7.2.0",
 		"express-validator": "^7.0.1",
 		"helmet": "^7.1.0",
 		"http-errors": "~1.6.3",
@@ -27,6 +27,6 @@
 		"nodemon": "^3.1.0"
 	},
 	"engines": {
-		"node": ">=20.10.0"
+		"node": ">=16.4.2"
 	}
 }
